<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.SignUpActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_in"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"/>




    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:id="@+id/etMail"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="5dp"
        android:padding="10dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:id="@+id/etPass1"/>

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:layout_margin="15dp"
            android:background="@color/design_default_color_primary"
            android:text="@string/Btn_log_in"
            android:textColor="@color/white"/>
    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/colorDarkGrey"
        android:text="@string/Btn_sign_up"
        android:textColor="@color/white"/>






</LinearLayout>








